# Stellar-MarketPay-

./: .gitignore  PULL_REQUEST_API_KEY_RATE_LIMITING.md  PULL_REQUEST_DELIVERABLE_IPFS.md  PULL_REQUEST_JOB_SHARING_OG.md  PULL_REQUEST_REFERRER_BONUS_CAP.md  zap-ignore.conf
contracts/marketpay-contract/: Cargo.toml  README.md
contracts/marketpay-contract/src/: dispute_bond_tests.rs  lib.rs
contracts/marketpay-contract/test_snapshots/deliverable_oracle_tests/: test_submit_deliverable_match_auto_releases.1.json  test_submit_deliverable_mismatch_enters_dispute.1.json
contracts/marketpay-contract/test_snapshots/event_tests/: test_create_escrow_emits_event.1.json  test_full_lifecycle_events_all_emitted.1.json  test_milestone_released_emits_event.1.json  test_raise_dispute_emits_event.1.json  test_refund_escrow_emits_event.1.json  test_release_escrow_emits_event.1.json  test_start_work_emits_event.1.json
contracts/marketpay-contract/test_snapshots/extension_tests/: test_approve_extension_updates_timeout.1.json  test_approve_without_request_panics.1.json  test_cannot_approve_own_request.1.json  test_client_requests_extension.1.json  test_double_request_panics.1.json  test_extension_after_start_work.1.json  test_extension_on_released_panics.1.json  test_extension_request_getter_returns_none_when_empty.1.json  test_freelancer_requests_client_approves.1.json  test_freelancer_requests_extension.1.json  test_new_timeout_must_be_later.1.json
contracts/marketpay-contract/test_snapshots/freeze_tests/: test_add_admin_and_get_admins.1.json  test_freeze_contract_by_admin.1.json  (+6 more)
(+207 files in other folders)
